--- a/src/index.css
+++ b/src/index.css
@@ -5,15 +5,16 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-weight: 700;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  monospace;
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #3c3f44;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -31,4 +32,95 @@ code {
 .column {
   display: flex;
   flex-direction: column;
+}
+
+.align-center {
+  align-items: center;
+}
+
+.w30 {
+  width: 30%;
+}
+
+.w40 {
+width: 40%;
+}
+
+.w60 {
+  width: 60%;
+}
+
+/* Input */
+.inputContainer {
+  width: 100%;
+  padding-top: 15px; 
+  position: relative;
+}
+
+.input {
+  border: 0;
+  outline: 0;
+  width: 100%;
+  color: #fff;
+  padding: 7px 0;
+  font-size: 1.3rem;
+  background: transparent;
+  transition: border-color 0.2s;
+  border-bottom: 2px solid #9b9b9b;
+}
+
+.inputLabel {
+  top: 0;
+  display: block;
+  font-size: 1rem;
+  color: #9b9b9b;
+  transition: 0.2s;
+  position: absolute;
+}
+
+.input:focus {
+  border-image: linear-gradient(to right, #ffc5cc, #ff82a7);
+  font-weight: 700;
+  border-width: 3px;
+  padding-bottom: 6px;
+  border-image-slice: 1;
+}
+
+.input::placeholder {
+  color: transparent;
+}
+
+.input:placeholder-shown ~ .inputLabel {
+  top: 20px;
+  cursor: text;
+  font-size: 1.3rem;
+}
+
+.input:focus ~ .inputLabel {
+  top: 0;
+  display: block;
+  font-size: 1rem;
+  transition: 0.2s;
+  font-weight: 700;
+  color: #ff82a7;
+  position: absolute;
+}
+
+.input:required, .input:invalid {
+  box-shadow: none;
+}
+
+.btn {
+  border: none;
+  height: 3rem;
+  color: white;
+  margin-top: 2rem;
+  font-weight: 700;
+  font-size: 1.3rem;
+  border-radius: 24px;
+  background-color: #ff82a7;
+}
+
+.btn:hover {
+  box-shadow: 0 4px 5px 0 rgba(0,0,0,.19), 0 1px 10px 0 rgba(0,0,0,.1), 0 2px 4px -1px rgba(0,0,0,.19);
 }
