--- a/src/index.css
+++ b/src/index.css
@@ -122,3 +122,7 @@ width: 40%;
 .btn:hover {
   box-shadow: 0 4px 5px 0 rgba(0,0,0,.19), 0 1px 10px 0 rgba(0,0,0,.1), 0 2px 4px -1px rgba(0,0,0,.19);
 }
+
+.btn:focus {
+  outline:0;
+}
