--- a/src/index.css
+++ b/src/index.css
@@ -136,3 +136,20 @@ width: 40%;
   justify-content: center;
   margin-top: 3rem;
 }
+
+@media only screen and (max-width: 380px) {
+  .btn {
+    width: 100%;
+    font-size: 1rem;
+  }
+
+  .inputLabel {
+    font-size: 1rem !important;
+  }
+
+  .Content {
+    margin-left: 4px;
+    margin-right: 4px;
+    margin-top: 24px;
+  }
+}
